# ece4760_final_project

./: CMakeLists.txt  README.md
Final_project/: CMakeLists.txt  final_project.c  pt_cornell_rp2040_v1_1_1.h  read-midi.py  song.c  song.h  vga16_graphics.c  vga16_graphics.h
